# monolm

./: .gitignore  README.md  accuracy_benchmark.py  chat.py  logbook.md  pyproject.toml  runner.py  timing_benchmark.py
benchmarks/: accuracy_benchmark.py  timing_benchmark.py
examples/: chat.py  code_debugger.py  config.yaml  git_commit.py  runner.py  url_to_markdown.py
monolm/: __init__.py  core.py  tools.py  tools_assistant.py  tools_stream.py  tools_user.py
